# cloud-armor-rules

./: .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  go.mod  go.sum  rulesProto.textproto
.github/workflows/: go.yml  scorecard.yml
cmd/: BUILD.bazel  rulescli.go
pkg/cloudarmor/: BUILD.bazel  cloudarmor.go  cloudarmor_test.go  testsuite.go  testsuite_test.go  variables.go  variables_test.go  vendor_ruleset_collection.pb.go
pkg/cloudarmor/config/: BUILD.bazel  cloud-armor-v1.yaml  cloud-armor-v2.yaml
pkg/cloudarmor/proto/: BUILD.bazel  vendor_ruleset_collection.proto
test/: BUILD.bazel  complex-tests.yaml  fileExpr.txt  http-tests.yaml  variables.yaml
