load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

licenses(["notice"])  # Apache 2.0

go_library(
    name = "cloudarmor",
    srcs = [
        "cloudarmor.go",
        "testsuite.go",
        "variables.go",
    ],
    embedsrcs = ["//pkg/cloudarmor/config"],
    importpath = "github.com/cel-expr/cloud-armor-rules/pkg/cloudarmor",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cloudarmor/proto:vendor_ruleset_collection_go_proto",
        "@org_golang_google_protobuf//encoding/prototext",
        "@com_github_google_cel_go//cel:go_default_library",
        "@com_github_google_cel_go//common/ast:go_default_library",
        "@com_github_google_cel_go//common/env:go_default_library",
        "@com_github_google_cel_go//common/operators:go_default_library",
        "@com_github_google_cel_go//common/overloads:go_default_library",
        "@com_github_google_cel_go//common/types:go_default_library",
        "@com_github_google_cel_go//common/types/ref:go_default_library",
        "@com_github_google_cel_go//interpreter:go_default_library",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "cloudarmor_test",
    srcs = [
        "cloudarmor_test.go",
        "testsuite_test.go",
        "variables_test.go",
    ],
    data = ["//test"],
    deps = [
        ":cloudarmor",
        "@com_github_google_cel_go//common/types:go_default_library",
        "@com_github_google_cel_go//common/types/ref:go_default_library",
    ],
)
